@@ -1,3 +1,19 @@
 # AEM-Exam-Prep
 
 This is the repository for storing all the learning notes for AEM Developer Exam preperation.
+
+
+VM options
+
+-Dcatalina.base="C:\dev\apps\apache-tomcat-6.0.35"
+-Dcatalina.home="C:\dev\apps\apache-tomcat-6.0.35"
+-Djava.endorsed.dirs="C:\dev\apps\apache-tomcat-6.0.35\endorsed"
+-XX:MaxPermSize=512m
+-Xmx512m
+-DalertsXLSPath=
+-Xshare:off
+-Dvirgin.propertiesPath=c:\\dev\\
+-DrootPath="C:\dev\apps\apache-tomcat-6.0.35\logs\store"
+-Dorg.apache.catalina.SESSION_COOKIE_NAME=SJSESSIONID
+
+
